# exchange-calendars-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
codegen/: generate_data.py
src/: lib.rs  main.rs
