
[package]
name = "exchange-calendars-rs"
version = "0.1.0"
edition = "2021"
description = "A high-performance global exchange calendar port based on Python's exchange_calendars"

[dependencies]
# Fundamentais para a gestão e conversão de tempo universal e local
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Será necessária para o build.rs ler os dados compactados no futuro
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" # Excelente para serializar matrizes binárias ultra-pequenas
